compiler/src/test/resources/amyc/parser/failing/WrongQName3.amy
module WrongQName
  case class Foo() : Baz.bar
end WrongQName
